@@ -2,7 +2,7 @@
 * @author Francesco di Dio
 * Date: 05 Novembre 2010 18.14
 * Titolo: Drawable.java
-* Versione: 0.6 Rev.a:
+* Versione: 0.6.1 Rev.a:
 */
 
 
@@ -17,7 +17,7 @@ import java.awt.Graphics2D;
  * 
  * @author tabuto83
  *
- * @version 0.6.0
+ * @version 0.6.1
  * 
  * @see Sprite
  */
